<resources>
    <string name="app_name">AroyaMusicPlayer</string>
    <string name="status_play">Playing</string>
    <string name="status_pause">Paused</string>
    <string name="status_stop">Stopped</string>
    <string name="time_zero">00:00</string>
    <string name="buttom_play">Play</string>
    <string name="buttom_stop">Stop</string>
    <string name="buttom_quit">Quit</string>
</resources>
