<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aroya.aroyamusicplayer.MainActivity">

    <ImageView
        android:id="@+id/backet_bg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/backet_round"
        android:backgroundTint="#000"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>
    <ImageView
        android:id="@+id/backet"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@drawable/backet_round"
        android:src="@mipmap/home_backet"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@id/backet_bg"
        app:layout_constraintRight_toRightOf="@id/backet_bg"
        app:layout_constraintTop_toTopOf="@id/backet_bg"
        app:layout_constraintBottom_toBottomOf="@id/backet_bg"/>
    <SeekBar
        android:id="@+id/progress"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backet_bg"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_stop"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintRight_toLeftOf="@id/progress"
        android:layout_marginRight="20dp"/>
    <TextView
        android:id="@+id/time_now"
        android:text="@string/time_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/progress"
        app:layout_constraintTop_toTopOf="@id/progress"
        app:layout_constraintBottom_toBottomOf="@id/progress"
        android:layout_marginRight="20dp"/>
    <TextView
        android:id="@+id/time_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_zero"
        app:layout_constraintLeft_toRightOf="@id/progress"
        app:layout_constraintTop_toTopOf="@id/progress"
        app:layout_constraintBottom_toBottomOf="@id/progress"
        android:layout_marginLeft="20dp"/>
    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttom_stop"
        app:layout_constraintTop_toBottomOf="@id/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttom_play"
        app:layout_constraintTop_toBottomOf="@id/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/stop"
        android:layout_marginLeft="20dp"/>
    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttom_quit"
        app:layout_constraintTop_toBottomOf="@id/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/stop"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"/>

</android.support.constraint.ConstraintLayout>
